best-streamlit-website/deploy/k8s/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          image: best-streamlit-website/scheduler:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8010
          resources:
            requests:
              cpu: 5m
              memory: 64Mi
            limits:
              cpu: 30m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  labels:
    app: scheduler
spec:
  selector:
    app: scheduler
  ports:
    - name: http
      port: 8010
      targetPort: 8010
  type: ClusterIP
